--- a/index.html
+++ b/index.html
@@ -15,45 +15,47 @@
     </head>
 
     <body>
-        <div class="first">
-        </div>
-        <div class="second">
-        </div>
-        <div class="third">
-        </div>
-        <div class="fourth">
-        </div>
-        <div class="fifth">
-        </div>
-        <div class="sixth">
-        </div>
-        <div class="seventh">
-        </div>
-        <div class="eighth">
-        </div>
-        <div class="ninth">
-        </div>
-        <div class="tenth">
-        </div>
-        <div class="firstbox">
-        </div>
-        <div class="secondbox">
-        </div>
-        <div class="thirdbox">
-        </div>
-        <div class="fourthbox">
-        </div>
-        <div class="fifthbox">
-        </div>
-        <div class="sixthbox">
-        </div>
-        <div class="seventhbox">
-        </div>
-        <div class="eighthbox">
-        </div>
-        <div class="ninthbox">
-        </div>
-        <div class="tenthbox">
+        <div class="game">
+            <div class="first">
+            </div>
+            <div class="second">
+            </div>
+            <div class="third">
+            </div>
+            <div class="fourth">
+            </div>
+            <div class="fifth">
+            </div>
+            <div class="sixth">
+            </div>
+            <div class="seventh">
+            </div>
+            <div class="eighth">
+            </div>
+            <div class="ninth">
+            </div>
+            <div class="tenth">
+            </div>
+            <div class="firstbox">
+            </div>
+            <div class="secondbox">
+            </div>
+            <div class="thirdbox">
+            </div>
+            <div class="fourthbox">
+            </div>
+            <div class="fifthbox">
+            </div>
+            <div class="sixthbox">
+            </div>
+            <div class="seventhbox">
+            </div>
+            <div class="eighthbox">
+            </div>
+            <div class="ninthbox">
+            </div>
+            <div class="tenthbox">
+            </div>
         </div>
         <script src="https://code.jquery.com/jquery-3.1.1.js"></script>
         <script src="js/scripts.js"></script>
